--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ a.button:hover {
 
 <section class="favorite-games fade-in-slide-up delay-2 select-none">
     <h3 class="text-4xl font-extrabold mb-8">Favorite games</h3>
-    <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498017495111/tds_thumbnail.png" alt="TDS" />
+    <img src="https://static.wikia.nocookie.net/tds/images/V1.33Thumbnail.png" alt="TDS" />
     <p>
         I like <span>TDS on Roblox</span> — it’s a grindy ass tower defense game that I've been playing for like 5 years
     </p>
@@ -182,7 +182,7 @@ a.button:hover {
             Play TDS on Roblox
         </a>
     </div>
-    <img src="https://cdn.discordapp.com/attachments/1247891135437955124/1256046498386817034/clash_royale_thumbnail.png" alt="Clash Royale" />
+    <img src="https://static.wikia.nocookie.net/clashroyale/images/1/15/How_to_Evolve_Your_Dragon_Loading_Screen.png" alt="Clash Royale" />
     <p>
         I also like <span>Clash Royale</span> — a shitty card game with p2w players that make me want to slice my dick off
     </p>
