--- a/index.html
+++ b/index.html
@@ -201,6 +201,26 @@ a.button:hover {
 
 <footer class="text-center text-sm p-8 text-gray-500 dark:text-gray-400 select-none">
     Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js</span>
+    <section class="fade-in-slide-up delay-3 max-w-3xl mx-auto px-6 py-16 select-none">
+  <h3 class="text-4xl font-extrabold mb-8 text-center">Languages I Know &amp; Use</h3>
+  <div class="flex flex-wrap justify-center gap-12 text-xl font-semibold">
+    <div class="flex flex-col items-center bg-gray-100 dark:bg-gray-800 rounded-3xl px-10 py-8 w-40 shadow-lg">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mb-4 text-yellow-400" viewBox="0 0 128 128" fill="currentColor" aria-hidden="true" role="img" >
+        <path d="M126.9 110.4l-8.7-27.8c-.6-1.7-1.8-3.2-3.4-4.2-3-2.2-6.9-1.6-9.3 1.2-1.7 1.9-3.8 3.3-6.3 4.2l-.1-.1-1.3-.7-4.9-2.7c-2.3-1.3-5-1.4-7.4-.3-2.3 1.1-4.1 3.1-5.2 5.5-.6 1.5-.9 3.1-.9 4.7 0 1.7.5 3.4 1.4 4.8 1.1 1.9 3.3 3.1 5.6 3.1h.1c2.7 0 5.1-1.7 5.9-4.3l4.4 2.5 2.7 1.5c3.3 1.8 7.4 1.5 10.4-1 2.2-1.8 3.5-4.7 3.5-7.8 0-.1 0-.1 0-.2zM29.8 64.8c.1-.4 2.7-10.3 7.9-21.3l-7.6-4.4c-1.6-1-3.7-1-5.3.1-1.6 1.1-2.5 3-2.4 5.1v28.7l7.4-4.2zm26.3 38.1-3.5-6.1 3.3-6c.7-1.3 1.1-2.7 1.1-4.2 0-1.4-.3-2.7-1-3.9-.7-1.3-1.9-2.3-3.4-2.8-1.3-.4-2.8-.5-4.3-.2l-5 1.2-5.6-10.1 13.1-7.2 8.3-4.5c5-2.7 6.9-10.6 3.7-15.9-2.5-3.8-7.7-5-11.8-2.9l-7.7 4.3-13.3-7.6 13.4-7.3 7.5-4.1c7.5-4.1 18-2 21.3 8.1 2.7 7.9-.5 17.1-7.7 22.6l-8.3 4.5-8.3 4.5c-3.8 2-5.7 6.3-5 10.4l3.5 6.1-3.3 6c-.7 1.3-1.1 2.7-1.1 4.2 0 1.4.3 2.7 1 3.9.7 1.3 1.9 2.3 3.4 2.8 1.3.4 2.8.5 4.3.2l5-1.2 5.6 10.1-13.1 7.2-8.3 4.5c-5 2.7-6.9 10.6-3.7 15.9 2.5 3.8 7.7 5 11.8 2.9l7.7-4.3 13.3 7.6-13.4 7.3-7.5 4.1c-7.5 4.1-18 2-21.3-8.1-2.7-7.9.5-17.1 7.7-22.6l8.3-4.5 8.3-4.5c3.8-2 5.7-6.3 5-10.4z"/>
+      </svg>
+      Python
+    </div>
+    <div class="flex flex-col items-center bg-gray-100 dark:bg-gray-800 rounded-3xl px-10 py-8 w-40 shadow-lg">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mb-4 text-blue-600" viewBox="0 0 128 128" aria-hidden="true" role="img" >
+        <path fill="#E44D26" d="M19.4 114.9L12 0h104l-7.4 114.9L63.7 128"/>
+        <path fill="#F16529" d="M64 117.1l32.2-8.9 6.3-88.5H64"/>
+        <path fill="#EBEBEB" d="M64 66.1h-14l.9 10.2H64v10.4H49.3l1.7 18.9 13.2 3.7v10.2l-33.7-9.3-.2-2.4-4.1-46.4-.1-1.6h18.8v10.2zM64 20.8h38.8l.5-5.8-40.2-.1v5.9z"/>
+        <path fill="#fff" d="M64 66.1v-10.2h32.8l-.3 3.5-3.1 34.5-14.5 4-14.2-4.1-.9-10.2h14.1zM64 36.7V20.8h-38.9l-.2 2.4-4.1 46.4-.1 1.6h18.7v-10.2H26.6l1.5-17 14.6-4.2v10.1z"/>
+      </svg>
+      HTML
+    </div>
+  </div>
+</section>
 </footer>
 
 </body>
