--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ a.button:hover {
 <footer class="text-center text-sm p-8 text-gray-500 dark:text-gray-400 select-none">
     Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js</span>
     <section class="fade-in-slide-up delay-3 max-w-3xl mx-auto px-6 py-16 select-none">
-  <h3 class="text-4xl font-extrabold mb-8 text-center">Languages I Know &amp; Use</h3>
+  <h3 class="text-4xl font-extrabold mb-8 text-center">languages i know</h3>
   <div class="flex flex-wrap justify-center gap-12 text-xl font-semibold">
     <div class="flex flex-col items-center bg-gray-100 dark:bg-gray-800 rounded-3xl px-10 py-8 w-40 shadow-lg">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mb-4 text-yellow-400" viewBox="0 0 128 128" fill="currentColor" aria-hidden="true" role="img" >
