--- a/index.html
+++ b/index.html
@@ -134,14 +134,19 @@
     vertical-align: middle;
     margin-left: 0.5rem;
   }
-  /* Darker background for language cards in light mode */
   .language-card {
-    background-color: #e2e8f0; /* Tailwind gray-200 */
-    color: #1a202c; /* Tailwind gray-900 */
+    background-color: #e2e8f0;
+    color: #1a202c;
   }
   .dark .language-card {
-    background-color: #1a202c; /* Tailwind gray-900 */
-    color: #e2e8f0; /* Tailwind gray-200 */
+    background-color: #1a202c;
+    color: #e2e8f0;
+  }
+  .language-logo {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 1rem;
+    object-fit: contain;
   }
 </style>
 </head>
@@ -204,23 +209,23 @@
   <h3 class="text-4xl font-extrabold mb-8 text-center">languages i know (barely)</h3>
   <div class="flex flex-wrap justify-center gap-12 text-xl font-semibold">
     <div class="language-card flex flex-col items-center rounded-3xl px-10 py-8 w-40 shadow-lg">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mb-4" viewBox="0 0 64 64" aria-hidden="true" role="img" fill="none" stroke="currentColor" stroke-width="3" stroke-linejoin="round" stroke-linecap="round">
-        <path d="M32 2c-10 0-18 8-18 18a18 18 0 0 0 36 0c0-10-8-18-18-18z" fill="#306998"/>
-        <path d="M32 18a14 14 0 0 0-14 14c0 9 14 14 14 14s14-5 14-14a14 14 0 0 0-14-14z" fill="#FFD43B"/>
-        <path d="M23 44c0-4 4-7 9-7s9 3 9 7" stroke="#FFE873"/>
-        <path d="M28 46v-6" stroke="#FFE873"/>
-        <path d="M36 46v-6" stroke="#FFE873"/>
-        <circle cx="32" cy="54" r="2" fill="#FFE873"/>
-      </svg>
+      <img
+        src="https://www.python.org/static/community_logos/python-logo.png"
+        alt="Python Logo"
+        class="language-logo"
+        decoding="async"
+        loading="lazy"
+      />
       Python
     </div>
     <div class="language-card flex flex-col items-center rounded-3xl px-10 py-8 w-40 shadow-lg">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-16 w-16 mb-4" viewBox="0 0 128 128" aria-hidden="true" role="img" fill="none">
-        <path fill="#E44D26" d="M19.4 114.9L12 0h104l-7.4 114.9L63.7 128"/>
-        <path fill="#F16529" d="M64 117.1l32.2-8.9 6.3-88.5H64"/>
-        <path fill="#EBEBEB" d="M64 66.1h-14l.9 10.2H64v10.4H49.3l1.7 18.9 13.2 3.7v10.2l-33.7-9.3-.2-2.4-4.1-46.4-.1-1.6h18.8v10.2zM64 20.8h38.8l.5-5.8-40.2-.1v5.9z"/>
-        <path fill="#fff" d="M64 66.1v-10.2h32.8l-.3 3.5-3.1 34.5-14.5 4-14.2-4.1-.9-10.2h14.1zM64 36.7V20.8h-38.9l-.2 2.4-4.1 46.4-.1 1.6h18.7v-10.2H26.6l1.5-17 14.6-4.2v10.1z"/>
-      </svg>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg"
+        alt="HTML5 Logo"
+        class="language-logo"
+        decoding="async"
+        loading="lazy"
+      />
       HTML
     </div>
   </div>
