--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
 
 <footer class="text-center text-sm p-6 text-gray-500 dark:text-gray-400 select-none max-w-3xl mx-auto">
   Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js</span>
+    <section class="text-center text-gray-600 dark:text-gray-400 italic mb-8 max-w-3xl mx-auto px-6 select-none">
+  <p>keep in mind this is WIP and I’m young, so of course it’s going to look dogshit</p>
+</section>
 </footer>
 
 </body>
