--- a/index.html
+++ b/index.html
@@ -142,11 +142,13 @@
     background-color: #1a202c;
     color: #e2e8f0;
   }
-  .language-logo {
-    width: 64px;
-    height: 64px;
-    margin-bottom: 1rem;
-    object-fit: contain;
+  .match-bg {
+    background-color: #e2e8f0;
+    color: #1a202c;
+  }
+  .dark .match-bg {
+    background-color: #1a202c;
+    color: #e2e8f0;
   }
 </style>
 </head>
@@ -175,7 +177,7 @@
   </p>
 </section>
 
-<section class="favorite-games fade-in-slide-up delay-2 select-none bg-gray-100 dark:bg-gray-800 text-black dark:text-white p-8 rounded-2xl flex flex-col items-center justify-center max-w-3xl mx-auto">
+<section class="favorite-games fade-in-slide-up delay-2 select-none match-bg p-8 rounded-2xl flex flex-col items-center justify-center max-w-3xl mx-auto">
   <h3 class="text-4xl font-extrabold mb-8">Favorite games</h3>
   <p>
     I like <span>TDS on Roblox</span> — it’s a grindy ass tower defense game that I've been playing for like 5 years
@@ -238,13 +240,12 @@
 </section>
 </footer>
 
-</body>
-<section class="fade-in-slide-up delay-3 max-w-3xl mx-auto px-6 py-16 select-none">
+<section class="fade-in-slide-up delay-3 match-bg max-w-3xl mx-auto px-6 py-16 select-none rounded-2xl">
   <h3 class="text-4xl font-extrabold mb-8 text-center">Tetris!</h3>
   <div class="flex flex-col md:flex-row justify-center items-center gap-8">
-    <canvas id="tetris" width="240" height="400" class="border-4 border-black dark:border-white transition-all duration-300"></canvas>
+    <canvas id="tetris" width="240" height="400" class="border-4 border-black dark:border-white transition-all duration-300 rounded-lg"></canvas>
     <div class="flex flex-col items-center gap-4">
-      <canvas id="preview" width="80" height="80" class="border-2 border-black dark:border-white transition-all duration-300"></canvas>
+      <canvas id="preview" width="80" height="80" class="border-2 border-black dark:border-white transition-all duration-300 rounded-lg"></canvas>
       <div class="text-xl font-semibold">Score: <span id="score">0</span></div>
       <div class="text-xl font-semibold">High Score: <span id="highscore">0</span></div>
       <div class="flex gap-2 mt-4">
@@ -256,57 +257,7 @@
     </div>
   </div>
 </section>
-<div id="gameOverScreen" class="fixed inset-0 flex items-center justify-center text-center text-white bg-black bg-opacity-80 text-4xl font-extrabold hidden transition-opacity duration-500 z-50">
-  game over!😔
-  <div class="text-base font-normal mt-4">tap or press any key to restart</div>
-</div>
 
-<script>
-const canvas=document.getElementById('tetris')
-const context=canvas.getContext('2d')
-context.scale(20,20)
-const previewCanvas=document.getElementById('preview')
-const previewCtx=previewCanvas.getContext('2d')
-previewCtx.scale(20,20)
-const scoreElement=document.getElementById('score')
-const highScoreElement=document.getElementById('highscore')
-const gameOverScreen=document.getElementById('gameOverScreen')
-const colors=[null,'#FF0D72','#0DC2FF','#0DFF72','#F538FF','#FF8E0D','#FFE138','#3877FF']
-const pieces='TJLOSZI'
-function createPiece(t){if(t==='T')return[[0,0,0],[1,1,1],[0,1,0]];if(t==='O')return[[2,2],[2,2]];if(t==='L')return[[0,3,0],[0,3,0],[0,3,3]];if(t==='J')return[[0,4,0],[0,4,0],[4,4,0]];if(t==='I')return[[0,5,0,0],[0,5,0,0],[0,5,0,0],[0,5,0,0]];if(t==='S')return[[0,6,6],[6,6,0],[0,0,0]];if(t==='Z')return[[7,7,0],[0,7,7],[0,0,0]]}
-function createMatrix(w,h){const m=[];while(h--)m.push(new Array(w).fill(0));return m}
-function collide(arena,player){const[m,o]=[player.matrix,player.pos];for(let y=0;y<m.length;++y){for(let x=0;x<m[y].length;++x){if(m[y][x]!==0&&(arena[y+o.y]&&arena[y+o.y][x+o.x])!==0)return true}}return false}
-function merge(arena,player){player.matrix.forEach((r,y)=>{r.forEach((v,x)=>{if(v!==0)arena[y+player.pos.y][x+player.pos.x]=v})})}
-function drawMatrix(matrix,offset,ctx){matrix.forEach((row,y)=>{row.forEach((v,x)=>{if(v!==0){ctx.globalAlpha=0.9;ctx.fillStyle=colors[v];ctx.fillRect(x+offset.x,y+offset.y,1,1);ctx.globalAlpha=1.0}})})
-function draw(){context.fillStyle=document.documentElement.classList.contains('dark')?'#000':'#fff';context.fillRect(0,0,canvas.width,canvas.height);drawMatrix(arena,{x:0,y:0},context);drawMatrix(player.matrix,player.pos,context)}
-function drawPreview(){previewCtx.fillStyle=document.documentElement.classList.contains('dark')?'#000':'#fff';previewCtx.fillRect(0,0,previewCanvas.width,previewCanvas.height);drawMatrix(nextPiece,{x:0,y:0},previewCtx)}
-function rotate(matrix){for(let y=0;y<matrix.length;++y){for(let x=0;x<y;++x){[matrix[x][y],matrix[y][x]]=[matrix[y][x],matrix[x][y]]}}matrix.forEach(row=>row.reverse())}
-function playerRotate(){rotate(player.matrix);if(collide(arena,player)){rotate(player.matrix);rotate(player.matrix);rotate(player.matrix)}}
-function playerMove(dir){player.pos.x+=dir;if(collide(arena,player))player.pos.x-=dir}
-function playerDrop(){player.pos.y++;if(collide(arena,player)){player.pos.y--;merge(arena,player);playerReset();arenaSweep();updateScore()}dropCounter=0}
-function playerReset(){player.matrix=nextPiece;nextPiece=createPiece(pieces[Math.floor(Math.random()*pieces.length)]);player.pos.y=0;player.pos.x=(arena[0].length/2|0)-(player.matrix[0].length/2|0);if(collide(arena,player)){gameOver()}}
-function arenaSweep(){let rowCount=1;outer:for(let y=arena.length-1;y>=0;--y){for(let x=0;x<arena[y].length;++x){if(arena[y][x]===0)continue outer}arena.splice(y,1);arena.unshift(new Array(arena[0].length).fill(0));score+=rowCount*10;rowCount*=2;if(score%100===0&&dropInterval>100)dropInterval-=50}}
-function updateScore(){scoreElement.innerText=score;if(score>highScore){highScore=score;localStorage.setItem('tetrisHighScore',highScore);highScoreElement.innerText=highScore}}
-function gameOver(){gameOverScreen.classList.remove('hidden');cancelAnimationFrame(animationFrame)}
-function restart(){arena.forEach(row=>row.fill(0));score=0;dropInterval=1000;updateScore();gameOverScreen.classList.add('hidden');playerReset();lastTime=0;update()}
-const arena=createMatrix(12,20)
-let score=0
-let highScore=parseInt(localStorage.getItem('tetrisHighScore'))||0
-highScoreElement.innerText=highScore
-const player={pos:{x:0,y:0},matrix:null}
-let nextPiece=createPiece(pieces[Math.floor(Math.random()*pieces.length)])
-let dropCounter=0
-let dropInterval=1000
-let lastTime=0
-let animationFrame
-function update(t=0){const d=t-lastTime;lastTime=t;dropCounter+=d;if(dropCounter>dropInterval){playerDrop()}draw();drawPreview();animationFrame=requestAnimationFrame(update)}
-document.addEventListener('keydown',e=>{if(gameOverScreen.classList.contains('hidden')){if(e.keyCode===37)playerMove(-1);else if(e.keyCode===39)playerMove(1);else if(e.keyCode===40)playerDrop();else if(e.keyCode===38)playerRotate()}else{restart()}})
-gameOverScreen.addEventListener('click',()=>restart())
-document.getElementById('left').addEventListener('click',()=>{if(gameOverScreen.classList.contains('hidden'))playerMove(-1)})
-document.getElementById('right').addEventListener('click',()=>{if(gameOverScreen.classList.contains('hidden'))playerMove(1)})
-document.getElementById('rotate').addEventListener('click',()=>{if(gameOverScreen.classList.contains('hidden'))playerRotate()})
-document.getElementById('down').addEventListener('click',()=>{if(gameOverScreen.classList.contains('hidden'))playerDrop()})
-playerReset()
-update()
-</script>
+<script src="https://your-tetris-script-url.js"></script>
+</body>
 </html>
