fix Tetris again

--- a/index.html
+++ b/index.html
@@ -258,6 +258,6 @@
   </div>
 </section>
 
-<script src="https://your-tetris-script-url.js"></script>
+<script src="https://github.com/nathanialihart/nathanialihart.github.io/blob/main/tetris.js"<></script>
 </body>
 </html>
