--- a/index.html
+++ b/index.html
@@ -258,6 +258,6 @@
   </div>
 </section>
 
-<script src="https://github.com/nathanialihart/nathanialihart.github.io/blob/main/tetris.js"<></script>
+<script src="https://raw.githubusercontent.com/nathanialihart/nathanialihart.github.io/refs/heads/main/tetris.js"<></script>
 </body>
 </html>
