--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <button class="toggle" @click="darkMode = !darkMode" aria-label="Toggle light and dark mode"></button>
     <a href="https://github.com/nathanialihart" target="_blank" rel="noopener noreferrer" class="ml-4" aria-label="GitHub Profile">
       <svg class="gitHubIcon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.166 6.839 9.489.5.092.682-.217.682-.482 0-.237-.009-.868-.013-1.703-2.782.603-3.369-1.343-3.369-1.343-.454-1.154-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.893 1.53 2.341 1.088 2.91.832.091-.647.35-1.088.636-1.339-2.22-.253-4.555-1.11-4.555-4.941 0-1.09.39-1.982 1.029-2.68-.103-.253-.446-1.27.098-2.647 0 0 .84-.269 2.75 1.025a9.564 9.564 0 0 1 2.5-.337c.85.004 1.705.115 2.5.337 1.909-1.294 2.747-1.025 2.747-1.025.546 1.377.203 2.394.1 2.647.64.698 1.028 1.59 1.028 2.68 0 3.842-2.337 4.685-4.565 4.932.36.31.682.92.682 1.855 0 1.337-.012 2.417-.012 2.747 0 .268.18.58.688.481A10.013 10.013 0 0 0 22 12c0-5.523-4.477-10-10-10z"/>
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12c0 4.418 2.865 8.166 6.839 9.489.5.092.682-.217.682-.482 0-.237-.009-.868-.013-1.703-2.782.603-3.369-1.343-3.369-1.343-.454-1.154-1.11-1.462-1.11-1.462-.908-.62.069-.608.069-.608 1.004.07 1.532 1.032 1.532 1.032.893 1.53 2.341 1.088 2.91.832.091-.647.35-1.088.636-1.339-2.22-.253-4.555-1.11-4.555-4.941 0-1.09.39-1.982 1.029-2.68-.103-.253-.446-1.27.098-2.647 0 0 .84-.269 2.75 1.025a9.564 9.564 0 0 1 2.504-.337c.85.004 1.705.115 2.504.337 1.909-1.294 2.747-1.025 2.747-1.025.546 1.377.203 2.394.1 2.647.64.698 1.028 1.59 1.028 2.68 0 3.841-2.337 4.687-4.565 4.935.359.309.678.919.678 1.852 0 1.336-.012 2.415-.012 2.743 0 .267.18.579.688.481C19.137 20.165 22 16.418 22 12c0-5.523-4.477-10-10-10z"/>
       </svg>
     </a>
   </div>
@@ -180,7 +180,7 @@
 <section class="favorite-games fade-in-slide-up delay-2 select-none match-bg p-8 rounded-2xl flex flex-col items-center justify-center max-w-3xl mx-auto">
   <h3 class="text-4xl font-extrabold mb-8">Favorite games</h3>
   <p>
-    I like <span>TDS on Roblox</span> — it’s a grindy ass tower defense game that I've been playing for like 5 years
+    I like <span>TDS on Roblox</span> — it's a grindy ass tower defense game that I've been playing for like 5 years
   </p>
   <div class="text-center mb-8">
     <a href="https://www.roblox.com/games/3260590327/Tower-Defense-Simulator" target="_blank" rel="noopener noreferrer" class="button">
@@ -236,7 +236,7 @@
 <footer class="text-center text-sm p-6 text-gray-500 dark:text-gray-400 select-none max-w-3xl mx-auto">
   Built with <span class="font-semibold text-indigo-400">Tailwind CSS</span> &amp; <span class="font-semibold text-purple-400">Alpine.js</span>
     <section class="text-center text-gray-600 dark:text-gray-400 italic mb-8 max-w-3xl mx-auto px-6 select-none">
-  <p>keep in mind this is WIP and I’m young, so of course it’s going to look dogshit</p>
+  <p>keep in mind this is WIP and I'm young, so of course it's going to look dogshit</p>
 </section>
 </footer>
 
@@ -258,6 +258,6 @@
   </div>
 </section>
 
-<script src="https://raw.githubusercontent.com/nathanialihart/nathanialihart.github.io/refs/heads/main/tetris.js"<></script>
+<script src="tetris.js"></script>
 </body>
 </html>
