--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" x-data="{ darkMode: true, loading: true, animeList: [] }" x-init="
     darkMode = JSON.parse(localStorage.getItem('darkMode') ?? 'true');
     $watch('darkMode', value => {
@@ -58,7 +58,7 @@
   }
   h1 {
     font-weight: 900;
-    font-size: 2.25rem;
+    font-size: 1.5rem;
     text-align: center;
     animation: glow 2s ease-in-out infinite alternate;
     color: white;
